--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	compile('org.webjars:jquery:2.2.4')
 	compile('org.webjars:bootstrap:4.4.1')
 	compile('javax.validation:validation-api')
+	compile('org.hibernate.validator:hibernate-validator:6.0.18.Final')
 	testCompile('org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.2')
 }
 
