--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 	compile('org.webjars:bootstrap:4.4.1')
 	compile('javax.validation:validation-api')
 	compile('org.hibernate.validator:hibernate-validator:6.0.18.Final')
+	// compile('org.springframework.boot:spring-boot-starter-validation')
 	testCompile('org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.2')
 }
 
