--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,7 @@ dependencies {
 	compile('javax.validation:validation-api')
 	compile('org.hibernate.validator:hibernate-validator:6.0.18.Final')
 	// compile('org.springframework.boot:spring-boot-starter-validation')
-	compile('org.springframework:spring-aop')
-	compile('org.aspectj:aspectjweaver')
+	compile('org.springframework.boot:spring-boot-starter-aop')
 	testCompile('org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.2')
 }
 
