--- a/bin/default/test.properties
+++ b/bin/default/test.properties
@@ -1,7 +1,7 @@
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:;DB_CLOSE_ON_EXIT=TRUE;MODE=MySQL
-spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
 spring.datasource.schema=classpath:schema.sql
 spring.datasource.data=classpath:data.sql
