--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/sampletools?serverTimezone=JST
-spring.datasource.username=root
-spring.datasource.password=Yasutaka716+
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.sql-script-encoding=UTF-8
