--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -3,5 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sampletools?serverTimezone=JST
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.sql-script-encoding=UTF-8
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.schema=classpath:schema.sql
 spring.datasource.data=classpath:data.sql
