update test properties to configure database initialization

--- a/bin/test/test.properties
+++ b/bin/test/test.properties
@@ -2,6 +2,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:;DB_CLOSE_ON_EXIT=TRUE;MODE=MySQL
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.initialize=true
-spring.datasource.schema=classpath:schema.sql
-spring.datasource.data=classpath:data.sql
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.schema=classpath:schema-h2.sql
+spring.datasource.data=classpath:data-h2.sql
